tests/paczka1/fuzzy1/46327937.err
Error in line 3: EFz A36 76,6
Error in line 2: DEGPhJJl A36 55,0
Error in line 10: DEGPhJJl S759 81,3
Error in line 23: 6Q34fkm7By A924 9,5
Error in line 24: 6Q34fkm7By A9 90,0
Error in line 28: XM1B0QwyUjS S759 168,5
Error in line 34: DEGPhJJl A924 61,61
Error in line 29: S759 A924 75,3
